Adição de logica para adição de algumas classes e telas de listagem

--- a/LSFit/src/main/resources/templates/index.html
+++ b/LSFit/src/main/resources/templates/index.html
@@ -9,21 +9,21 @@
 <body>
 
     <header class="bg-primary text-white p-3">
-        <h1 class="text-center">Bem-vindo ao GymBD</h1>
+        <h1 class="text-center">Bem-vindo ao LSfit</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">GymBD</a>
+        <a class="navbar-brand" href="/">LSFit</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagina-aluno">Alunos</a>
+                    <a class="nav-link" href="/pagina-pessoas">Pessoas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagina-instrutores">instrutores</a>
+                    <a class="nav-link" href="/pagina-instrutores">Instrutores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pagina-curso">Cursos</a>
@@ -34,8 +34,8 @@
 
     <main class="container mt-5">
         <section class="text-center mb-4">
-            <h2>Sobre o GymBD</h2>
-            <p>O GymBD é um sistema de gestão para academias, facilitando o controle de alunos, instrutoreses e cursos de forma prática e organizada.</p>
+            <h2>Sobre o LSFit</h2>
+            <p>O LSFit é um sistema de gestão para academias, facilitando o controle de alunos, instrutoreses e cursos de forma prática e organizada.</p>
         </section>
 
         <section class="row">
@@ -70,7 +70,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center p-3 mt-5">
-        <p>&copy; 2024 GymBD. Todos os direitos reservados.</p>
+        <p>&copy; 2024 LSFit. Todos os direitos reservados.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
