--- a/LSFit/src/main/resources/templates/Create/CreateAluno.html
+++ b/LSFit/src/main/resources/templates/Create/CreateAluno.html
@@ -1,36 +1,89 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Cadastro de Aluno</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro de Aluno - LSFit</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Cadastro de Aluno</h1>
-    <form action="/aluno/salvar" method="post">
-        <label for="cpfPessoa">CPF:</label>
-        <input type="text" id="cpfPessoa" name="cpfPessoa" required><br>
+    <header class="bg-primary text-white p-3">
+        <h1 class="text-center">Cadastro de Aluno</h1>
+    </header>
 
-        <label for="nomePessoa">Nome:</label>
-        <input type="text" id="nomePessoa" name="nomePessoa" required><br>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">LSFit</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/pagina-pessoas">Pessoas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pagina-instrutores">Instrutores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pagina-curso">Cursos</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-        <label for="telefone1Pessoa">Telefone 1:</label>
-        <input type="text" id="telefone1Pessoa" name="telefone1Pessoa"><br>
+    <main class="container mt-5">
+        <form action="/aluno/salvar" method="post" class="bg-light p-4 rounded shadow">
+            <div class="form-group">
+                <label for="cpfPessoa">CPF:</label>
+                <input type="text" id="cpfPessoa" name="cpfPessoa" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="nomePessoa">Nome:</label>
+                <input type="text" id="nomePessoa" name="nomePessoa" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="telefone1Pessoa">Telefone 1:</label>
+                <input type="text" id="telefone1Pessoa" name="telefone1Pessoa" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="telefone2Pessoa">Telefone 2:</label>
+                <input type="text" id="telefone2Pessoa" name="telefone2Pessoa" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="cep">CEP:</label>
+                <input type="text" id="cep" name="cep" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="bairro">Bairro:</label>
+                <input type="text" id="bairro" name="bairro" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="rua">Rua:</label>
+                <input type="text" id="rua" name="rua" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="numero">Número:</label>
+                <input type="text" id="numero" name="numero" class="form-control">
+            </div>
+            <h3>Sobre o Plano</h3>
+            <div class="form-group">
+                <label for="preco">Preço:</label>
+                <input type="text" id="preco" name="preco" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="duracaoEmMeses">Duração (meses):</label>
+                <input type="number" id="duracaoEmMeses" name="duracaoEmMeses" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Salvar</button>
+        </form>
+    </main>
 
-        <label for="telefone2Pessoa">Telefone 2:</label>
-        <input type="text" id="telefone2Pessoa" name="telefone2Pessoa"><br>
+    <footer class="bg-dark text-white text-center p-3 mt-5">
+        <p>&copy; 2024 LSFit. Todos os direitos reservados.</p>
+    </footer>
 
-		<label for="cep">cep:</label>
-        <input type="text" id="cep" name="cep"><br>
-
-		<label for="bairro">bairro:</label>
-        <input type="text" id="bairro" name="bairro"><br>
-
-		<label for="rua">rua:</label>
-        <input type="text" id="rua" name="rua"><br>
-
-		<label for="numero">numero:</label>
-        <input type="text" id="numero" name="numero"><br>
-
-        <button type="submit">Salvar</button>
-    </form>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
