--- a/LSFit/src/main/resources/templates/Read/ReadAluno.html
+++ b/LSFit/src/main/resources/templates/Read/ReadAluno.html
@@ -25,7 +25,10 @@
                     <th>Rua</th>
                     <th>Bairro</th>
                     <th>Número</th>
-                    <th>CEP</th>
+					<th>Cep</th>
+                    <th>Duração em Meses</th>
+					<th>Preço</th>
+
                     
                 </tr>
             </thead>
@@ -40,6 +43,8 @@
                     <td th:text="${aluno.endereco.bairro}"></td> <!-- Bairro do Endereco -->
                     <td th:text="${aluno.endereco.numero}"></td> <!-- Número do Endereco -->
                     <td th:text="${aluno.endereco.cep}"></td> <!-- CEP do Endereco -->
+					<td th:text="${aluno.plano.duracaoEmMeses}"></td> <!-- Número do Endereco -->
+                    <td th:text="${aluno.plano.preco}"></td> <!-- CEP do Endereco -->
                 </tr>
             </tbody>
         </table>
