--- a/LSFit/src/main/resources/templates/Read/ReadAluno.html
+++ b/LSFit/src/main/resources/templates/Read/ReadAluno.html
@@ -11,7 +11,37 @@
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Alunos</h1>
 </header>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LSFit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/alunos">Alunos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/instrutores">Instrutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/gerentes">Gerentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/unidades">Unidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maquinas">Maquinas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/exercicios">Exercicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/fichas">Fichas de Treino</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <main class="container mt-5">
     <div class="table-responsive">
         <table class="table table-bordered">
@@ -28,6 +58,8 @@
 					<th>Cep</th>
                     <th>Duração em Meses</th>
 					<th>Preço</th>
+                    <th>Ações</th>
+
 
                     
                 </tr>
@@ -45,9 +77,13 @@
                     <td th:text="${aluno.endereco.cep}"></td> <!-- CEP do Endereco -->
 					<td th:text="${aluno.plano.duracaoEmMeses}"></td> <!-- Número do Endereco -->
                     <td th:text="${aluno.plano.preco}"></td> <!-- CEP do Endereco -->
+                    <td>
+                        <a class="btn btn-info" th:href="@{/aluno/deletar/{id}(id=${aluno.pkIdPessoa})}">Deletar</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
+        <a class="nav-link" href="/aluno/form">Criar Aluno</a>
     </div>
 </main>
 
