--- a/LSFit/src/main/resources/templates/Read/ReadInstrutor.html
+++ b/LSFit/src/main/resources/templates/Read/ReadInstrutor.html
@@ -11,6 +11,37 @@
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de instrutors</h1>
 </header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LSFit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/alunos">Alunos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/instrutores">Instrutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/gerentes">Gerentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/unidades">Unidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maquinas">Maquinas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/exercicios">Exercicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/fichas">Fichas de Treino</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <main class="container mt-5">
     <div class="table-responsive">
@@ -27,6 +58,8 @@
                     <th>Número</th>
                     <th>CEP</th>
                     <th>Salario</th>
+                    <th>Ações</th>
+
                 </tr>
             </thead>
             <tbody>
@@ -42,9 +75,13 @@
                     <td th:text="${instrutor.endereco.numero}"></td> <!-- Número do Endereco -->
                     <td th:text="${instrutor.endereco.cep}"></td> <!-- CEP do Endereco -->
                     <td th:text="${instrutor.salarioInstrutor}"></td> <!-- CEP do Endereco -->
+                    <td>
+                        <a class="btn btn-info" th:href="@{/instrutor/deletar/{id}(id=${instrutor.pkIdPessoa})}">Deletar</a>
+                    </td>
                 </tr>   
             </tbody>
         </table>
+        <a class="nav-link" href="/instrutor/form">Criar Instrutor</a>
     </div>
 </main>
 
