--- a/LSFit/src/main/resources/templates/Read/ReadExercicio.html
+++ b/LSFit/src/main/resources/templates/Read/ReadExercicio.html
@@ -11,6 +11,37 @@
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Exercícios</h1>
 </header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LSFit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/alunos">Alunos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/instrutores">Instrutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/gerentes">Gerentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/unidades">Unidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maquinas">Maquinas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/exercicios">Exercicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/fichas">Fichas de Treino</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <main class="container mt-5">
     <div class="table-responsive">
@@ -22,6 +53,8 @@
                     <th>Repetições</th>
                     <th>Nome da Máquina</th>
                     <th>Tempo de Descanso (segundos)</th>
+                    <th>Ações</th>
+
                 </tr>
             </thead>
             <tbody>
@@ -31,9 +64,13 @@
                     <td th:text="${exercicio.numeroDeRepeticoes}"></td> <!-- Repetições -->
                     <td th:text="${exercicio.maquina.nomeMaquina}"></td> <!-- Nome da Máquina -->
                     <td th:text="${exercicio.tempoDescanso}"></td> <!-- Tempo de Descanso -->
+                    <td>
+                         <a class="btn btn-info" th:href="@{/exercicio/deletar/{id}(id=${exercicio.nomeExercicio})}">Deletar</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
+        <a class="nav-link" href="/exercicio/form">Criar Exercicio</a>
     </div>
 </main>
 
