--- a/LSFit/src/main/resources/templates/Read/ReadFichas.html
+++ b/LSFit/src/main/resources/templates/Read/ReadFichas.html
@@ -11,6 +11,37 @@
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Fichas de Exercício</h1>
 </header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LSFit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/alunos">Alunos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/instrutores">Instrutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/gerentes">Gerentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/unidades">Unidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maquinas">Maquinas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/exercicios">Exercicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/fichas">Fichas de Treino</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <main class="container mt-5">
     <div class="table-responsive">
@@ -27,11 +58,13 @@
                     <td th:text="${ficha.aluno.nomePessoa}"></td>
                     <td th:text="${ficha.instrutor.nomePessoa}"></td>
                     <td>
-                        <a class="btn btn-info" th:href="@{/ficha/{id}(id=${ficha.pkIdFichaDeTreino})}">Ver mais</a>
+                        <a class="btn btn-info" th:href="@{/ficha/{id}(id=${ficha.pkIdFichaDeTreino})}">Ver Mais</a>
+                        <a class="btn btn-info" th:href="@{/ficha/deletar/{id}(id=${ficha.pkIdFichaDeTreino})}">Deletar</a>
                     </td>
                 </tr>
             </tbody>
         </table>
+        <a class="nav-link" href="/fichaExercicio/form">Criar Ficha de Treino</a>
     </div>
 </main>
 
