--- a/LSFit/src/main/resources/templates/Read/ReadMaquinaExercicio.html
+++ b/LSFit/src/main/resources/templates/Read/ReadMaquinaExercicio.html
@@ -11,19 +11,54 @@
 <header class="bg-primary text-white p-3">
     <h1 class="text-center">Lista de Máquinas e Exercícios</h1>
 </header>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">LSFit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/alunos">Alunos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/instrutores">Instrutores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/gerentes">Gerentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/unidades">Unidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/maquinas">Maquinas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/exercicios">Exercicios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/fichas">Fichas de Treino</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
 <main class="container mt-5">
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead class="thead-dark">
                 <tr>
+                    <th>ID da Máquina</th>
                     <th>Nome da Máquina</th>
                     <th>Data de Manutenção</th>
                     <th>Exercícios</th>
+                    <th>Ações</th>
+
                 </tr>
             </thead>
             <tbody>
                 <tr th:each="maquina : ${maquinas}">
+                    <td th:text="${maquina.pkIdMaquina}"></td> <!-- ID da Pessoa -->
                     <td th:text="${maquina.nomeMaquina}"></td> <!-- Nome da Máquina -->
                     <td th:text="${maquina.dataManutencao}"></td> <!-- Data de Manutenção -->
                     <td>
@@ -31,9 +66,13 @@
                             <li th:each="exercicio : ${maquina.exercicios}" th:text="${exercicio.nomeExercicio}"></li>
                         </ul>
                     </td> <!-- Exercícios associados à Máquina -->
+                    <td>
+                        <a class="btn btn-info" th:href="@{/maquina/deletar/{id}(id=${maquina.pkIdMaquina})}">Deletar</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
+        <a class="nav-link" href="/maquina/form">Criar Maquina</a>
     </div>
 </main>
 
