--- a/LSFit/src/main/resources/templates/Read/ReadPessoa.html
+++ b/LSFit/src/main/resources/templates/Read/ReadPessoa.html
@@ -26,7 +26,8 @@
                     <th>Bairro</th>
                     <th>Número</th>
                     <th>CEP</th>
-                    
+                    <th>Ações</th>
+
                 </tr>
             </thead>
             <tbody>
