--- a/LSFit/src/main/resources/templates/index.html
+++ b/LSFit/src/main/resources/templates/index.html
@@ -20,13 +20,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagina-pessoas">Pessoas</a>
+                    <a class="nav-link" href="/alunos">alunos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagina-instrutores">Instrutores</a>
+                    <a class="nav-link" href="/instrutores">Instrutores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pagina-curso">Cursos</a>
+                    <a class="nav-link" href="/gerentes">Gerentes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/unidades">Unidades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/maquinas">Maquinas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/exercicios">Exercicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/fichas">Fichas de Treino</a>
                 </li>
             </ul>
         </div>
